--- a/gb/15/10/27/n4559475.md
+++ b/gb/15/10/27/n4559475.md
@@ -1,61 +1,50 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nhezea392/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nhezea392/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nhezea392/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nhezea392/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>两年间南澳29所公校要求扩增教室</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2015年10月27日讯】（大纪元记者李平澳洲阿德雷德编译报导）过去两年，有近30所公立学校要求增加教室，以应对人口增长引起的入学压力。</p>
-<p>据广告报（The Advertiser）消息，<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>省教育厅数据显示，19所学校，即几乎所有小学增加教室的要求得到回应，大多数获得两间“活动教室”，可以容纳50个学生。另外10所，包括一些中学和乡村学校，其请求已在评审中。</p>
-<p>此问题的暴露是因为本周Mawson Lakes学校在争取使用Salisbury市议会的部分大楼以满足快速增长的入学率。</p>
-<p>Linden Park小学在今年年初不得不宣布停止招生，现在他们获得了两座教室建筑，能够容纳5个班共125个学生。</p>
-<p>使用可移动教室是因为招生量的浮动是很常见的，<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>小学校长委员会（SA Primary Principals Association）主席肯特（Pam Kent）表示：“如果招生计划显示学生数量居高不下的可能性很高的话，那么更多学校应该得到永久扩建。”</p>
-<p>省教育厅基础设施总裁特德维尔（Ross Treadwell）表示，教育厅已不再将旧“活动木房”移来移去，而是安装新的“轻型建筑”，每座成本为50万澳元，并不比永久教室差。“过去20年活动建筑发生了很大改变，现在有空调，具备多种服务设施。”他说，“很多获得（活动教室）的学校都说好。”他称，此类设施预计可使用多年，没有学校反映有质量问题。</p>
-<p>特德维尔表示，学校总体上是可以满足招生量的骤增的，因为并非所有学习区域都被连续使用。Linden Park小学在安装活动教室前，曾使用图书馆、艺术房和计算机室上课。近年要求更多教室的学校数目增加并不意外。</p>
-<p>澳洲教育工会（Australian Education Union）南澳省主席墨菲（Jan Murphy）表示，获得活动教室有所延迟有时意味着班级要扩大，或者专业教室不能发挥该有的作用，因为要被用作普通教室。</p>
-<p>学校不需要支付获取活动教室，因为教育厅有特别预算。中学的专业教室更多，因此比小学有更多的灵活性。旧式木质活动教室中有些含有石棉，这些都已被拆除。</p>
-<p>过去两年里，增加临时教室的学校包括：<br />东区：Thorndon Park 小学、Vale Park 小学、Walkerville 小学、Linden Park 小学、East Marden 小学；<br />南区：Port Noarlunga 小学、Pimpala 小学、Willunga高中、Seacliff 小学；<br />西区：Henley Beach 小学、Fulham North 小学、Glenelg 小学；<br />北区：AngleVale 小学、Craigmore 高中、Nailsworth小学、Mawson Lakes、Gulfview Heights、Freeling 小学；<br />山区：Birdwood 小学。</p>
+	<p>【大纪元2015年10月27日讯】（大纪元记者李平澳洲阿德雷德编译报导）过去两年，有近30所公立学校要求增加教室，以应对人口增长引起的入学压力。
+<p>据广告报（The Advertiser）消息，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>省教育厅数据显示，19所学校，即几乎所有小学增加教室的要求得到回应，大多数获得两间“活动教室”，可以容纳50个学生。另外10所，包括一些中学和乡村学校，其请求已在评审中。
+<p>此问题的暴露是因为本周Mawson Lakes学校在争取使用Salisbury市议会的部分大楼以满足快速增长的入学率。
+<p>Linden Park小学在今年年初不得不宣布停止招生，现在他们获得了两座教室建筑，能够容纳5个班共125个学生。
+<p>使用可移动教室是因为招生量的浮动是很常见的，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>小学校长委员会（SA Primary Principals Association）主席肯特（Pam Kent）表示：“如果招生计划显示学生数量居高不下的可能性很高的话，那么更多学校应该得到永久扩建。”
+<p>省教育厅基础设施总裁特德维尔（Ross Treadwell）表示，教育厅已不再将旧“活动木房”移来移去，而是安装新的“轻型建筑”，每座成本为50万澳元，并不比永久教室差。“过去20年活动建筑发生了很大改变，现在有空调，具备多种服务设施。”他说，“很多获得（活动教室）的学校都说好。”他称，此类设施预计可使用多年，没有学校反映有质量问题。
+<p>特德维尔表示，学校总体上是可以满足招生量的骤增的，因为并非所有学习区域都被连续使用。Linden Park小学在安装活动教室前，曾使用图书馆、艺术房和计算机室上课。近年要求更多教室的学校数目增加并不意外。
+<p>澳洲教育工会（Australian Education Union）南澳省主席墨菲（Jan Murphy）表示，获得活动教室有所延迟有时意味着班级要扩大，或者专业教室不能发挥该有的作用，因为要被用作普通教室。
+<p>学校不需要支付获取活动教室，因为教育厅有特别预算。中学的专业教室更多，因此比小学有更多的灵活性。旧式木质活动教室中有些含有石棉，这些都已被拆除。
+<p>过去两年里，增加临时教室的学校包括：<br />东区：Thorndon Park 小学、Vale Park 小学、Walkerville 小学、Linden Park 小学、East Marden 小学；<br />南区：Port Noarlunga 小学、Pimpala 小学、Willunga高中、Seacliff 小学；<br />西区：Henley Beach 小学、Fulham North 小学、Glenelg 小学；<br />北区：AngleVale 小学、Craigmore 高中、Nailsworth小学、Mawson Lakes、Gulfview Heights、Freeling 小学；<br />山区：Birdwood 小学。
 <p>责任编辑：陈紫雨</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/12/2/1/n3499737.md#1">南澳公校额外征收学费逾500澳元</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/12/2/27/n3524556.md#1">最新数据：南澳公校不亚于顶尖私校</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/12/8/28/n3669671.md#1">阿德雷德公校经费被减 老师家长成清洁工</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/12/9/21/n3688385.md#1">南澳学校应警惕针对教师网络欺凌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/5/15/n3871170.md#1">行为不当家长被禁步南澳校园</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/5/16/n3872227.md#1">联邦财政预算分配 南澳喜忧掺半</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/5/20/n3874969.md#1">阿德雷德家长谎编地址 只为子女入名校</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/6/11/n3891778.md#1">留学生在阿德雷德找房难 甚至花上几个月</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10174332.md#1" target="_blank">周晓辉：叶利钦退出苏共引发退党潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/17/n10981686.md#1" target="_blank">两位古琴大师的悲剧：毁琴自尽 文革失踪</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/4/n9353698.md#1" target="_blank">代理法轮功案 律师从无罪辩护到主动控告</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/6/n13625137.md#1">文艺复兴究竟是为了荣耀上帝还是人类文明？</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/14/n13645328.md#1">【新闻大家谈】中国多地封城 疫苗副作用曝光</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/13/n13643836.md#1">【神韵作品】2019 神韵交响乐《汗舞壮歌》</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13641873.md#1">【财商天下】中国股债市齐跌 外资信心瓦解</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639341.md#1">【更新3.11】乌克兰市长被亲俄武装人员带走</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639480.md#1">中俄联手反西方制裁？专家揭中共挺俄内幕</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13641266.md#1">【中国观察】李克强的进退</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13639867.md#1">持台湾护照赴英拍节目 杜汶泽在桃园机场捐款</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/14/n13644401.md#1">金钟视帝唐川昨晚病逝 享寿69岁</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/11/n13640008.md#1">熊黛林产后复出荧屏 深度入戏状态引热议</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/13/n13642984.md#1">曾见证大S具俊晔交往 黄子佼佩服男方这一点</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640388.md#1">《超时空亚当计划》影评：巧遇未来的自己 成冒险开端</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/8/n13630795.md#1">比苹果含钾更高？早上喝一杯柠檬水的九大理由</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/9/n13634214.md#1">头发可以天天洗吗？洗头三大误区一定要知道</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/12/n13640276.md#1">36岁朱芯仪罹乳癌 一种风险最易被轻忽</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/8/n13630796.md#1">咳嗽和喉咙痛的自然食疗法</a></li>
-<li><a href="https://github.com/hlsodg3891/djy/blob/master/gb/22/3/10/n13636807.md#1">皮肤保养不好 当心变老甚至罹癌！教你保护方法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/30/n7475667.md#1">郑恩宠谈上海官场黑幕 韩正被逼步步后退</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/30/n7472414.md#1">世界著名程序员的成功之道：与他人分享发明</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/30/n7471983.md#1">加州华裔中医灭门案 嫌犯被控罪或面临死刑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/30/n7471914.md#1">复活节长周末后 悉尼机场酝酿再罢工</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/30/n7471822.md#1">台内湖女童案现场凭吊  母致谢但盼先缓缓</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/30/n7475664.md#1">贾静雯主演《小李飞刀》 武打男替身想不到</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/29/n7468754.md#1">亚莉安娜等新星崛起 MV新曲受关注</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/29/n7468511.md#1">刘凤瑶苦等2190天发片 吴克群赠金凤凰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/29/n7468450.md#1">赖雅妍返女儿身 演音乐剧爱上萧闳仁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/29/n7468443.md#1">与刘诗诗合拍戏？吴奇隆：要看她是否高兴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nhezea392/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nhezea392/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/27/n4559475.htm">两年间南澳29所公校要求扩增教室</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/10/27/n4559475.htm">两年间南澳29所公校要求扩增教室</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nhezea392/djy/blob/master/gb/15/10/27/n4559475.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nhezea392/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nhezea392/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nhezea392/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/15/10/27/n4559475.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
